--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,10 +13,35 @@ android {
             abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
     }
+
+    signingConfigs {
+        release {
+            storeFile file('irony.jks')
+            storePassword '000520'
+            keyAlias 'irony'
+            keyPassword '000520'
+        }
+        debug {
+            storeFile file('irony.jks')
+            storePassword '000520'
+            keyAlias 'irony'
+            keyPassword '000520'
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            debuggable true
+            signingConfig signingConfigs.release
+        }
+
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debuggable true
+            signingConfig signingConfigs.release
         }
     }
     lintOptions {
